src/07.ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: whoareyou-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.frontend.rule.type: PathPrefixStrip
spec:
  rules:
  - host: 
    http:
      paths:
      - path: /whoareyou
        backend:
          serviceName: whoareyou-service
          servicePort: 80
